feat: add verify git url api
