# server/internal/api/repositories/router/routes.go
@@ -1,0 +1,11 @@
+package router
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/toufiq-austcse/deployit/internal/api/repositories/controller"
+)
+
+func Setup(group *gin.RouterGroup, controller *controller.RepoController) {
+	group.GET("", controller.GetRepoDetails)
+
+}
